# order-tracking-extractor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: kami-v2.md  出图经验手册.md  故障-信号映射表.md  算法技术报告.html  算法技术报告.md  诊断结果解读指南.html  诊断结果解读指南.md  项目上手指南.html
examples/: generate_fault_signals.py  generate_html.py  generate_plots.py  generate_report_figures.py  test_all_faults.py  test_cot_vs_tot.py  test_full_validation.py  validate_algorithm.py  validate_signals.py
order_tracking_extractor/: __init__.py  core.py  diagnostic_report.py
test/data/fault/: loose_slipper.txt  piston_wear.txt  valve_plate_wear.txt
test/data/normal/: normal.txt
test/data/real/fault/: 8MPA-X.txt  8MPA-Y.txt  8MPA-Z.txt
test/data/real/normal/: 8MPa_N-X.txt  8MPa_N-Y.txt  8MPa_N-Z.txt
