[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "order-tracking-extractor"
version = "7.22"
description = "阶次分析特征提取封装包：COT/TOT阶次分析 + 多维度特征提取 + 故障诊断"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["order_tracking_extractor*"]
